--- a/1.html
+++ b/1.html
@@ -3,6 +3,15 @@
 <head>
   <title>오버워치 친구들-맘스땃쥐</title>
   <meta charset="utf-8">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DB460Y0RD9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DB460Y0RD9');
+</script>
 </head>
 <body>
   <h1><a href="index.html">오버워치 친구들</a></h1>
